<resources>
    <string name="app_name">OUC Work</string>
    <string name="OUC">中国海洋大学</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <!--login_layout-->
    <string name="user_id">学号/工号</string>
    <string name="login">登录</string>
    <string name="find_password">忘记密码?</string>
    <string name="by_phone">通过短信找回密码</string>
    <string name="next_step">下一步</string>
    <string name="other_ways">其他方式</string>
    <string name="registers">注册</string>
    <string name="auth_code">获取验证码</string>
    <!-- schedule_layout-->
    <string name="schedule">课程表</string>
    <string name="out">退出登录</string>
    <string name="personal_information">编辑个人资料</string>
    <string name="my_course">我的课件</string>
    <string name="my_collection">我的收藏</string>
    <string name="setting">设置</string>
    <string name="name">名字</string>
    <string name="profession">专业</string>
    <!--addcourse_layout-->
    <string name="term">课程所在学期</string>
    <string name="add_course">添加课程</string>
    <string name="course_name">课程名称</string>
    <string name="course_teacher">授课老师</string>
    <string name="course_site">课程地点</string>
    <string name="course_week">课程周期</string>
    <string name="course_time">课程时长</string>
    <string name="year">年</string>
    <string name="di">第</string>
    <string name="week">周</string>
    <string name="grade">节</string>
    <string name="semester">学期</string>
    <string name="add_button">添加</string>
    <!--edit_layout-->
    <string name="true_name">真实姓名</string>
    <string name="grade_profession">年级专业</string>
    <string name="upload_img">上传图片</string>
    <string name="finish">完成</string>
    <string name="id">账号</string>
    <string name="number">17020031118</string>
    <!--星期-->
    <string name="class_week">节/周</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <!--resetpassword_layout-->
    <string name="reset">重置</string>
    <!--sitting_layout-->
    <string name="reset_password">重置密码</string>
    <string name="vision">版本 v1.0.0</string>
    <!--class_layout-->
    <string name="peopleInfo">班级人数: 55 人</string>
    <string name="take_phone">拍照签到</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
