<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_findPassword"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBorder"
        app:title="@string/app_name"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:id="@+id/otherWays"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:text="@string/other_ways" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/colorText"
        android:text="@string/by_phone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/byPhone"
        android:textSize="24sp"
        android:hint="电话号码"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:id="@+id/reAuthCode"
            android:maxLines="1"
            android:textSize="24sp"
            android:inputType="number"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/reGetCode"
            android:text="@string/auth_code"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_identify_code_normal"/>
    </LinearLayout>
    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape"
        android:text="@string/next_step"
        android:textColor="@color/colorText"
        android:textSize="24sp"/>
</LinearLayout>
