<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="70dp"
    android:layout_height="70dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/colorBorder"
    app:cardCornerRadius="7dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/lecture_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/course_name"
            android:textColor="@color/colorText"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lecture_teacher"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/course_teacher"
                android:textColor="@color/colorText"/>
            <TextView
                android:id="@+id/lecture_site"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/course_site"
                android:textColor="@color/colorText"/>
        </LinearLayout>
        <TextView
            android:id="@+id/lecture_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/course_week"
            android:textColor="@color/colorText"/>
    </LinearLayout>
</android.support.v7.widget.CardView>