<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_01">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBorder"
        app:title="@string/app_name"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:text="@string/reset_password"
        android:paddingLeft="20dp"
        android:drawableRight="@mipmap/right"
        android:background="@drawable/textview_border"/>
    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorText"
        android:text="@string/vision"
        android:paddingLeft="20dp"
        android:background="@drawable/textview_border"/>
    <!--<Switch-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"/>-->
</LinearLayout>