<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBorder"
        app:title="@string/app_name"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/background_01">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/edit_head"
            android:src="@drawable/default_head"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/colorText"
                android:text="@string/id"
                android:gravity="center_horizontal"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:focusable="false"
                android:textColor="@color/colorDark"
                android:textSize="24sp"
                android:text="@string/number"
                android:id="@+id/id"
                android:background="@android:drawable/edit_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/colorText"
                android:text="@string/true_name"
                android:gravity="center_horizontal"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorDark"
                android:textSize="24sp"
                android:id="@+id/true_name"
                android:background="@android:drawable/edit_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/colorText"
                android:text="@string/grade_profession"
                android:gravity="center_horizontal"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorDark"
                android:textSize="24sp"
                android:id="@+id/grade_profession"
                android:background="@android:drawable/edit_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:text="@string/upload_img"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_1"
                    android:src="@drawable/face"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_2"
                    android:src="@drawable/face"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_3"
                    android:src="@drawable/face"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:id="@+id/edit_button"
            android:text="@string/finish"
            android:textSize="24sp"
            android:textColor="@color/colorText"
            android:background="@drawable/shape"/>
    </LinearLayout>
</LinearLayout>